<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/customers_firstname_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customers_first_name"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customers_firstname_text"
        android:layout_toRightOf="@id/customers_firstname_tag"
        tools:text=" ...Namee "
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/customers_lastname_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/customers_firstname_tag"
        android:text="@string/customers_last_name"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/customers_lastname_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/customers_lastname_tag"
        android:layout_below="@id/customers_firstname_text"
        tools:text="...Sorname"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/customers_adress_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/customers_lastname_tag"
        android:text="@string/customers_adress"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/customers_adress_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/customers_adress_tag"
        android:layout_below="@id/customers_lastname_text"
        tools:text="...adress"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/customers_phone1_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/customers_adress_tag"
        android:text="@string/customers_phone1"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/customers_phone1_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/customers_phone1_tag"
        android:layout_below="@id/customers_adress_text"
        tools:text="...phone1 "
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/customers_phone2_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/customers_phone1_tag"
        android:text="@string/customers_phone2"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/customers_phone2_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/customers_phone1_tag"
        android:layout_below="@id/customers_phone1_text"
        tools:text="...phone2"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/customers_phone3_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/customers_phone2_tag"
        android:text="@string/customers_phone3"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/customers_phone3_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/customers_phone3_tag"
        android:layout_below="@id/customers_phone2_text"
        tools:text="...phone3 "
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/customers_email_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/customers_phone3_tag"
        android:text="@string/customers_email"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/customers_email_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/customers_email_tag"
        android:layout_below="@id/customers_phone3_text"
        tools:text="...email "
        android:textSize="18sp"
        android:textStyle="bold"/>

    <View android:id="@+id/primerdivisor"
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#000000"
        android:layout_below="@id/customers_email_tag"/>
</RelativeLayout>