<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                android:id="@+id/product_description_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:textSize="12sp"
                android:textStyle="bold"/>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:id="@+id/product_description_text"
                tools:text="...Description: "
                android:textSize="15sp"
                android:textStyle="bold"/>
                </LinearLayout>


                </LinearLayout>
                <View
                style="@style/CardView.InnerDivisor"
                />
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                android:id="@+id/product_category_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_category"
                android:textSize="12sp"
                android:textStyle="bold"/>
                <TextView
                android:id="@+id/product_category_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                tools:text="...Categoria: "
                android:textSize="15sp"
                android:textStyle="bold"/>
                </LinearLayout>
                <View
                style="@style/CardView.InnerDivisor"
                />
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                android:id="@+id/product_price_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textSize="12sp"
                android:textStyle="bold"/>
                <TextView
                android:id="@+id/product_price_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                tools:text="...Precio: "
                android:textSize="15sp"
                android:textStyle="bold"/>
                </LinearLayout>
                <View
                style="@style/CardView.InnerDivisor"
                />
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                android:id="@+id/product_qty_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_price_tag"
                android:text="@string/product_qty"
                android:textSize="12sp"
                android:textStyle="bold"/>
                <TextView
                android:id="@+id/product_qty_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                tools:text="...Cantidad: "
                android:textSize="15sp"
                android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/product_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:text="&#8942;"
                    android:textAppearance="?android:textAppearanceLarge" />
            </LinearLayout>
        </LinearLayout>

</android.support.v7.widget.CardView>

</RelativeLayout>