<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/order_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/order_options">
                    <TextView
                        android:id="@+id/order_client_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_client"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/order_client_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:textSize="14sp"
                        tools:text="Cliente: " />
                </LinearLayout>

            </RelativeLayout>
            <View style="@style/CardView.InnerDivisorHorizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/order_status_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_status"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/order_status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:textSize="14sp"
                        tools:text="Estado: " />
                </LinearLayout>

                <View
                    style="@style/CardView.InnerDivisorVertical"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/order_date_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_date"
                        android:layout_gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/order_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        tools:text="Fecha: " />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>